gcc/testsuite/g++.target/aarch64/sve/acle/general-c++/type_redef_16.c
/* { dg-do compile } */

struct svpattern { int x; };

#pragma GCC aarch64 "arm_sve.h" /* { dg-error "'svpattern' referred to as enum" } */
